added file/folder deletion
